--- a/prog35142.week12.deployment/prog35142.week12.deployment/prog35142.week12.deployment.csproj
+++ b/prog35142.week12.deployment/prog35142.week12.deployment/prog35142.week12.deployment.csproj
@@ -166,7 +166,10 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Properties\PublishProfiles\local deployment.pubxml" />
+    <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
+    <None Include="Properties\PublishProfiles\ftp deployment.pubxml" />
+    <None Include="Properties\PublishProfiles\local deployment ftp.pubxml" />
+    <None Include="Properties\PublishProfiles\local deployment web deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
